--- a/inventory-patient-service/src/main/resources/application-mysql.yml
+++ b/inventory-patient-service/src/main/resources/application-mysql.yml
@@ -18,7 +18,7 @@ logging:
     ROOT: info
     # debug level for all use defined code logs
     com.cg: info
-# Enables discovery CLient eatures
+# Enables discovery CLient eatures - Use this or Confi file
 eureka:
   client:
     enabled: true
