--- a/inventory-specialities-service/src/main/resources/application.yml
+++ b/inventory-specialities-service/src/main/resources/application.yml
@@ -10,4 +10,5 @@ eureka:
     serviceUrl:
       # Changed because previous once was ausing errors with gateway
       defaultZone: ${eureka_url:http://localhost:8761/eureka/}
-
+image:
+     location: C:\Users\Admin\Documents\GitHub\booking_doctor\inventory-specialities-service\img\
