--- a/inventory-auth-service2/src/main/resources/application.yml
+++ b/inventory-auth-service2/src/main/resources/application.yml
@@ -16,4 +16,7 @@ security:
   jwt:
     token:
       secret-key: secret-key-nguyen-tuan-hung-dep-trai-vai
-      expire-length: 300000 # 5 minutes duration by default: 5 minutes * 60 seconds * 1000 miliseconds
+      expire-length: 30000000 # 5 minutes duration by default: 5 minutes * 60 seconds * 1000 miliseconds
+
+image:
+     location: C:\Users\Admin\Documents\GitHub\booking_doctor\inventory-auth-service2\img\
